# X_Legal_Stuff_Webscrapper

./: .env.example  .gitignore  README.md  pyproject.toml  x_scrapper.py
docs/: COMPLIANCE_NOTES.md  DATA_POLICY.md  PROJECT_AUDIT.md  PROJECT_PLAN.md  SECURITY.md  SOURCES_POLICY.md  TAXONOMY.md
policies/: knowledge_library_ingest.balanced.json  knowledge_library_ingest.permissive.json  knowledge_library_ingest.strict.json
src/x_legal_stuff_webscrapper/: __init__.py  classifier.py  cli.py  collector_x.py  config.py  exporter.py  knowledge_extractor.py  knowledge_gate.py  knowledge_library_export.py  knowledge_quality.py  knowledge_schema.py  llm_enrichment.py  media_downloader.py  storage.py  taxonomy_mapper.py  vision_ocr.py
tests/: test_classifier.py  test_cli.py  test_knowledge_extractor.py  test_knowledge_gate.py  test_knowledge_library_export.py  test_knowledge_quality.py  test_knowledge_schema.py  test_media_downloader.py  test_taxonomy_mapper.py  test_vision_ocr.py
