[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x-legal-stuff-webscrapper"
version = "0.1.0"
description = "Pipeline do zbierania i analizy publicznych postow/obrazow z X dla zastosowan badawczych."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "kawidev" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
x-legal-scrapper = "x_legal_stuff_webscrapper.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
